# safaripipe

./: .env.example  .gitignore  README.md  docker-compose.kerberos.yml  docker-compose.yml  pyproject.toml
config/: dev.toml  local-kerberos.toml  local.toml  prod.toml
docs/: eod-es-scheduled-pipeline.md  real-world-kerberos-avro.md  rebuild-from-scratch-tutorial.md  test-driven-rebuild-tutorial.md
kerberos/: Dockerfile.kdc  client_jaas.conf  kafka_jaas.conf  kdc-entrypoint.sh  krb5-host.conf  krb5.conf
reference/: confluent_avro_consumer.py
samples/: control_message.avsc  control_message.json  control_message_start.json
scripts/: bootstrap_consumer.sh  bootstrap_e2e_docker.sh  bootstrap_es_lookup.sh  run_eod.sh  verify_kerberos_avro_consumer.sh  verify_kerberos_broker.sh
src/etl/: __init__.py  avro_io.py  config.py  control_query.py  eod_runner.py  eod_state.py  es_lookup.py  json_io.py  kafka_consumer.py  kafka_producer.py  message.py
src/json_transform/: facility_fields.yaml  fields.yaml  json_to_csv.py  transform_facility_to_csv.py
src/json_transform/tests/: dummy_source.json  test_result.csv
src/kafka_codex_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_avro.py  test_config.py  test_control_query.py  test_eod_runner.py  test_eod_state.py  test_es_lookup.py  test_kafka_consumer.py  test_message.py  test_transform_facility.py
