[project]
name = "kafka-codex-etl"
version = "0.1.0"
description = "Two-component ETL pipeline for Kafka Avro control messages and Elasticsearch lookups."
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8.13,<9",
  "confluent-kafka[avro]>=2.4,<3",
  # Field-spec YAML for the per-feed JSON->CSV transforms (src/json_transform/).
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "fastavro>=1.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
